--- a/src/App.global.css
+++ b/src/App.global.css
@@ -31,8 +31,8 @@ body {
 .Hello {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  align-items: space-between;
 }
 
 .TopBar {
@@ -124,9 +124,6 @@ li {
 }
 
 .Info {
-  display: flex;
-  flex-direction: column;
-  justify-self: end;
   width: 100%;
   font-weight: 100;
 }
