--- a/src/App.global.css
+++ b/src/App.global.css
@@ -13,7 +13,6 @@
 }
 
 body {
-  position: relative;
   color: white;
   background: url('../assets/csel_bg00.png');
   background-color: rgba(0, 0, 0, 0.5);
@@ -23,22 +22,23 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  width: 1024px;
   height: 720px;
   overflow: hidden;
 }
 
 .Hello {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: space-between;
+  margin-top: 130px;
 }
 
 .TopBar {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background-color:rgba(0, 0, 0, 0.7);
-  padding: 5px 20px;
+  padding: 0 20px;
   margin: 0;
   display: flex;
   align-items: center;
@@ -47,6 +47,7 @@ body {
   border-bottom: 3px solid transparent;
   border-image: linear-gradient(to right, #bb27ff, #F90000);
   border-image-slice: 1;
+  z-index: 1;
 }
 
 .TopBar h1 {
@@ -61,11 +62,69 @@ body {
 }
 
 .Top-menu ul li {
-  margin: 0 20px;
+  margin: 0 15px;
+}
+
+.Top-menu ul li:last-child {
+  margin-right: 0px;
+}
+
+.Top-menu .dropdown-toggle {
+  width: 100%;
+  height: auto;
+  background: none;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.Top-menu .dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  background-color: #101010;
+  padding: 10px 0;
+  margin-top: 10px;
+  border-radius: 5px;
+  width: 130px;
+  box-shadow: 0px 0px 7px black;
+}
+
+.Top-menu .dropdown-menu .dropdown-header {
+  margin: 5px 20px;
+  font-size: 12px;
+  cursor: context-menu;
+  color: #999999;
+}
+
+.Top-menu .dropdown-menu .dropdown-item {
+  color: #ffff;
+  text-decoration: none;
+  margin: 5px 20px;
+}
+
+.Top-menu .dropdown-menu .dropdown-item:hover {
+  color: #f8a500;
+}
+
+.Top-menu .dropdown-divider {
+  border-top: 1px solid #303030;
+  margin: 5px 5px;
+}
+
+.Top-menu .btn {
+  width: 100%;
+  height: auto;
+  background: none;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: none;
+  padding: 0;
 }
 
 .Menu-title {
-  margin: 70px auto;
   display: grid;
   grid-template-columns: 300px 300px;
   grid-gap: 20px;
@@ -88,6 +147,7 @@ button {
   text-transform: uppercase;
   text-align: right;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 button:hover {
@@ -134,16 +194,20 @@ li {
 }
 
 .Info {
+  position: fixed;
+  bottom: 5px;
+  left: 0;
   width: 100%;
   font-weight: 100;
 }
 
 .Info h3 {
-  z-index: 0;
+  z-index: 1;
+  font-size: 16px;
   font-style: italic;
   font-weight: 500;
   margin: 0 20px;
-  margin-bottom: -10px;
+  margin-bottom: -8px;
 }
 
 .Text {
@@ -157,10 +221,81 @@ li {
 .Text p {
   border-top: 2px solid white;
   border-bottom: 2px solid white;
-  height: 26px;
+  height: 20px;
   margin: 0;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 16px;
   font-weight: normal;
   padding: 10px 20px;
   font-family: 'Noto serif', serif;
+}
+
+body .modal-open {
+  background-color: black;
+}
+
+.modal {
+  position: absolute;
+  top: 33vh;
+  left: 31vw;
+  z-index: 9999;
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  background-color: #101010;
+  outline: none;
+  padding: 20px;
+  border-radius: 7px;
+  box-shadow: 0px 0px 7px black;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+.modal .modal-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.modal .modal-header .modal-title {
+  margin: 20px auto;
+  margin-top: 0;
+  text-transform: uppercase;
+}
+
+.modal .close {
+  position: relative;
+  top: 0;
+  right: 0;
+  background: none;
+  width: 14px;
+  height: 14px;
+  padding: 0;
+  margin: -15px -10px;
+}
+
+.modal .close .sr-only {
+  display: none;
+}
+
+.modal .modal-body {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.modal .modal-body input {
+  width: 300px;
+  padding: 12px 16px;
+  background: none;
+  border: 1px solid rgba(255,255,255,0.5);
+  border-radius: 3px;
+  color: rgba(255,255,255,0.5);
+  margin: 5px auto;
+  outline: none;
+}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
 }
