links and modal
Some important links added and modal changes (positioning and sign in buttons)

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -147,7 +147,7 @@ button {
   text-transform: uppercase;
   text-align: right;
   cursor: pointer;
-  border-radius: 2px;
+  border-radius: 3px;
 }
 
 button:hover {
@@ -236,19 +236,17 @@ body .modal-open {
 
 .modal {
   position: absolute;
-  top: 33vh;
-  left: 31vw;
+  top: calc(100% / 2);
+  left: calc(100% / 3);
+  margin-bottom: 300px;
+  width: 300px;
   z-index: 9999;
-  display: flex;
-  align-self: center;
-  justify-self: center;
+  align-content: center;
   background-color: #101010;
   outline: none;
   padding: 20px;
   border-radius: 7px;
   box-shadow: 0px 0px 7px black;
-  animation-name: animatetop;
-  animation-duration: 0.4s
 }
 
 .modal .modal-header {
@@ -285,7 +283,7 @@ body .modal-open {
 }
 
 .modal .modal-body input {
-  width: 300px;
+  width: 260px;
   padding: 12px 16px;
   background: none;
   border: 1px solid rgba(255,255,255,0.5);
@@ -295,7 +293,23 @@ body .modal-open {
   outline: none;
 }
 
-@keyframes animatetop {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
+.modal .modal-footer button {
+  width: 300px;
+  height: 40px;
+  font-size: 16px;
+  padding: 12px 0;
+  margin: 5px auto;
+  text-align: center;
+  background-color: #AA7000;
+  font-weight: 500;
+  text-transform: initial;
+}
+
+.modal .modal-footer button:last-child {
+  background-color: #7289DA;
+}
+
+.modal .modal-footer button:last-child:hover {
+  filter: none;
+  background-color: #3450b6;
 }
