--- a/src/App.global.css
+++ b/src/App.global.css
@@ -16,7 +16,7 @@ body {
   color: white;
   background: url('../assets/csel_bg00.png');
   background-color: rgba(0, 0, 0, 0.5);
-  background-size: 100%;
+  background-size: cover;
   background-position-y: 35%;
   background-blend-mode: multiply;
   font-family: 'Roboto', sans-serif;
@@ -230,17 +230,12 @@ li {
   font-family: 'Noto serif', serif;
 }
 
-body .modal-open {
-  background-color: black;
-}
-
 .modal {
   position: absolute;
-  top: calc(100% / 2);
-  left: calc(100% / 3);
-  margin-bottom: 300px;
+  top: calc(50vh / 2);
+  left: calc(100vw / 3);
   width: 300px;
-  z-index: 9999;
+  z-index: 1050;
   align-content: center;
   background-color: #101010;
   outline: none;
@@ -283,7 +278,7 @@ body .modal-open {
 }
 
 .modal .modal-body input {
-  width: 260px;
+  width: -webkit-fill-available;
   padding: 12px 16px;
   background: none;
   border: 1px solid rgba(255,255,255,0.5);
@@ -312,4 +307,41 @@ body .modal-open {
 .modal .modal-footer button:last-child:hover {
   filter: none;
   background-color: #3450b6;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-backdrop.show {
+  animation: fade-in .15s linear 0s 1;
+}
+
+.modal-backgrop.fade {
+  animation: fade-in .15s linear 0s 1 reverse;
+}
+
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.fade {
+  transition: opacity .15s linear;
+}
+
+.modal-dialog {
+  position: relative;
+  width: 300px;
+}
+
+@keyframes fade-in {
+  0% {opacity: 0};
+  100% {opacity: 1};
 }
