--- a/src/App.global.css
+++ b/src/App.global.css
@@ -341,6 +341,11 @@ li {
   width: 300px;
 }
 
+.Back-button {
+  width: initial;
+  height: initial;
+}
+
 @keyframes fade-in {
   0% {opacity: 0};
   100% {opacity: 1};
